// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amount should match snapshots for base and Pure components 1`] = `
<div>
  <span
    class="component default"
  >
    
    1
    <span
      class="minorPartAndCurrency defaultMinor"
    >
      
      
       ₽
    </span>
  </span>
  <span
    class="component"
  >
    
    1
     ₽
  </span>
</div>
`;

exports[`Amount should not render plus sign when showPlus and value <= 0 1`] = `
<div>
  <span
    class="component default"
  >
    
    0
    <span
      class="minorPartAndCurrency defaultMinor"
    >
      
      
    </span>
  </span>
  <span
    class="component default"
  >
    
    −1
    <span
      class="minorPartAndCurrency defaultMinor"
    >
      
      
    </span>
  </span>
  <span
    class="component"
  >
    
    0
  </span>
  <span
    class="component"
  >
    
    −1
  </span>
</div>
`;

exports[`Amount should render plus sign when showPlus and value > 0 1`] = `
<div>
  <span
    class="component default"
  >
    +
    1
    <span
      class="minorPartAndCurrency defaultMinor"
    >
      
      
    </span>
  </span>
  <span
    class="component"
  >
    +
    1
  </span>
</div>
`;

exports[`Amount should render rightAddons 1`] = `
<div>
  <span
    class="component default"
  >
    
    1
    <span
      class="minorPartAndCurrency defaultMinor"
    >
      
      
      <span />
    </span>
  </span>
  <span
    class="component"
  >
    
    1
    <span />
  </span>
</div>
`;
